# mpc

./: .gitmodules  frames_2025-02-24_11.31.47.gv  v4.1.json  v4.json
.devcontainer/: Dockerfile  devcontainer.json
camera_legacy_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
camera_legacy_ws/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
camera_legacy_ws/install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
camera_legacy_ws/log/: latest_build
camera_ws/install/: local_setup.sh  setup.sh
camera_ws/install/librealsense2/lib/: librealsense2-gl.so.2.55.1
camera_ws/install/librealsense2/lib/pkgconfig/: realsense2.pc
camera_ws/install/librealsense2/share/librealsense2/: package.sh
camera_ws/install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
camera_ws/install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
camera_ws/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
camera_ws/install/realsense2_description/share/realsense2_description/: package.sh
camera_ws/log/: latest_build
convex_ellipsoid_planner/install/: local_setup.sh  setup.bash  setup.sh
convex_ellipsoid_planner/install/clustering_python/lib/clustering_python/: bounding_box_node
convex_ellipsoid_planner/install/clustering_python/share/clustering_python/: package.sh
convex_ellipsoid_planner/install/custom_interface_gym/share/custom_interface_gym/: package.sh
convex_ellipsoid_planner/install/px4_msgs/share/px4_msgs/: package.sh
convex_ellipsoid_planner/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
convex_ellipsoid_planner/install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh
convex_ellipsoid_planner/install/ros2_gym_pybullet_drones/lib/ros2_gym_pybullet_drones/: aviary_wrapper  noisy_aviary  pcd_to_csv  random_control  trajectory_generator  trajectory_tracker  vision_client  vision_wrapper  waypoint_eg
convex_ellipsoid_planner/install/ros2_gym_pybullet_drones/share/ros2_gym_pybullet_drones/: package.sh
convex_ellipsoid_planner/install/rrt_path_finder/share/rrt_path_finder/: package.dsv  package.ps1  package.sh
convex_ellipsoid_planner/install/rrt_python_gym/lib/rrt_python_gym/: rrt_planner
convex_ellipsoid_planner/log/: latest_build
convex_ellipsoid_planner/src/ros2_gym_pybullet_drones/: setup.py
convex_ellipsoid_planner/src/ros2_gym_pybullet_drones/ros2_gym_pybullet_drones/: aviary_wrapper.py
convex_ellipsoid_planner/src/rrt_path_finder/: CMakeLists.txt
convex_ellipsoid_planner/src/rrt_path_finder/data_structure/: backup_traj.h  cmd_traj.h  exp_traj.h
convex_ellipsoid_planner/src/rrt_path_finder/data_structure/base/: ellipsoid.h  piece.h  polytope.h  trajectory.h
convex_ellipsoid_planner/src/rrt_path_finder/include/rrt_path_finder/: ciri.h  ciri_ellip.h  ciri_sphere.h  corridor_finder.h  corridor_finder_ellip.h  datatype.h  firi.hpp  gcopter.hpp
convex_ellipsoid_planner/src/rrt_path_finder/src/: ciri.cpp  ciri_ellip.cpp  ciri_sphere.cpp  corridor_finder.cpp  corridor_finder_ellip.cpp  pcd_manipulation.cpp  pointcloud_transformer.cpp  rrt_node.cpp  rrt_node_firi.cpp  rrt_node_new_replan.cpp  rrt_node_px4.cpp  rrt_node_safe_replan.cpp  trajectory_server.cpp  trajectory_server_px4.cpp  waypoint.py
convex_ellipsoid_planner/src/rrt_path_finder/src/utils/: banded_system.cpp  ellipsoid.cpp  geometry_utils.cpp  lbfgs.cpp  mvie.cpp  optimization_utils.cpp  piece.cpp  polynomial_interpolation.cpp  polytope.cpp  quickhull.cpp  root_finder.cpp  sdlp.cpp  trajectory.cpp
convex_ellipsoid_planner/src/rrt_path_finder/super_utils/: color_msg_utils.hpp
convex_ellipsoid_planner/src/rrt_path_finder/utils/geometry/: geometry_utils.h
convex_ellipsoid_planner/src/rrt_path_finder/utils/header/: color_msg_utils  type_utils.hpp
convex_ellipsoid_planner/src/rrt_path_finder/utils/optimization/: banded_system.h  mvie.h  optimization_utils.h  polynomial_interpolation.h
new/px4-offboard_ws/: acados_ocp.json
new/px4-offboard_ws/c_generated_code/: Makefile  acados_sim_solver_multirotor_rate_model.c  acados_sim_solver_multirotor_rate_model.h  acados_solver.pxd  acados_solver_multirotor_rate_model.c  acados_solver_multirotor_rate_model.h  main_multirotor_rate_model.c  main_sim_multirotor_rate_model.c
new/px4-offboard_ws/c_generated_code/multirotor_rate_model_cost/: multirotor_rate_model_cost.h  multirotor_rate_model_cost_y_0_fun.c  multirotor_rate_model_cost_y_0_fun_jac_ut_xt.c  multirotor_rate_model_cost_y_0_hess.c  multirotor_rate_model_cost_y_e_fun.c  multirotor_rate_model_cost_y_e_fun_jac_ut_xt.c  multirotor_rate_model_cost_y_e_hess.c  multirotor_rate_model_cost_y_fun.c  multirotor_rate_model_cost_y_fun_jac_ut_xt.c  multirotor_rate_model_cost_y_hess.c
new/px4-offboard_ws/c_generated_code/multirotor_rate_model_model/: multirotor_rate_model_expl_ode_fun.c  multirotor_rate_model_expl_vde_adj.c  multirotor_rate_model_expl_vde_forw.c  multirotor_rate_model_model.h
new/px4-offboard_ws/install/: local_setup.sh  setup.sh
new/px4-offboard_ws/log/: latest_build
t265_px4_bridge/install/: local_setup.sh  setup.sh
t265_px4_bridge/log/: latest_build
t265_px4_bridge/src/bridge_px4/: CMakeLists.txt
t265_px4_bridge/src/cpp_pubsub/: CMakeLists.txt  package.xml
t265_px4_bridge/src/cpp_pubsub/src/: publisher_member_function.cpp
t265_px4_bridge/src/t265_to_px4_bridge/: CMakeLists.txt  package.xml
test_ws/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
test_ws/install/t265_to_px4_bridge/share/t265_to_px4_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
test_ws/install/t265_to_px4_bridge/share/t265_to_px4_bridge/cmake/: t265_to_px4_bridgeConfig.cmake
test_ws/log/: latest_build  latest_list
test_ws/src/t265_to_px4_bridge/: CMakeLists.txt
test_ws/src/t265_to_px4_bridge/src/: t265_to_px4_bridge.cpp
(+169 files in other folders)
